# Abstract-Interfaces

./: Abstract-Interfaces.cabal  README.md
src/Abstract/Interfaces/: Compression.hs  Counter.hs  Lock.hs  Queue.hs  Stack.hs  Wrapper.hs
src/Abstract/Interfaces/Counter/: Dec.hs  Get.hs  Inc.hs
src/Abstract/Interfaces/Queue/: Deq.hs  Enq.hs
src/Abstract/Interfaces/Stack/: Pop.hs  Push.hs
